# fennel-language-server

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: audit.yaml  test.yaml
crates/fennel-language-server/: Cargo.toml
crates/fennel-language-server/src/: cli.rs  config.rs  helper.rs  main.rs  view.rs
crates/fennel-ls/: Cargo.toml
crates/fennel-ls/src/: config.rs  main.rs  view.rs
crates/fennel-parser/: Cargo.toml
crates/fennel-parser/examples/: parse_file.rs
crates/fennel-parser/src/: ast.rs  errors.rs  lexer.rs  lib.rs  parser.rs  syntax.rs
crates/fennel-parser/src/ast/: bind.rs  error.rs  eval.rs  func.rs  macros.rs  models.rs  nodes.rs
crates/fennel-parser/src/parser/: bnf.rs  helper.rs  sets.rs
crates/fennel-parser/src/static/: compiler-macro  globals  globals-func  globals-module  globals-var  keywords  literals  operator  reserved
crates/fennel-parser/src/static/modules/: coroutine  debug  file  io  math  os  package  string  table
crates/fennel-parser/testdata/parser/: cst  raw.fnl
