[package]
name = "fennel-language-server"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "5.4.0"
fennel-parser = { path = "../fennel-parser" }
ropey = "1.5.0"
serde = "1.0.145"
serde_json = "1.0.85"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "io-std"] }
tower-lsp = "0.17.0"
