[package]
name = "fennel-language-server"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
dashmap = "5.4.0"
fennel-parser = { path = "../fennel-parser" }
ropey = "1.6.0"
serde = "1.0.152"
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = [
  "rt-multi-thread",
  "io-std",
  "io-util",
  "net",
] }
tower-lsp = "0.18.0"
